<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lab6</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt">"                   Word textfield"</string>
    <string name="mov">Moves:</string>
    <string name="NumOfMov">132</string>
    <string name="Scor">Score:</string>
    <string name="Score">123</string>
    <string name="Res">Restart</string>
    <string name="menu">" Menu "</string>
    <string name="B1"></string>
    <string name="B2"></string>
    <string name="B3"></string>
    <string name="B4"></string>
    <string name="B5"></string>
    <string name="B6"></string>
    <string name="B7"></string>
    <string name="B8"></string>
    <string name="B9"></string>
    <string name="B10"></string>
    <string name="B11"></string>
    <string name="B12"></string>
    <string name="B13"></string>
    <string name="B14"></string>
    <string name="B15"></string>
    <string name="B16"></string>
    <string name="B17"></string>
    <string name="B18"></string>
    <string name="B19"></string>
    <string name="B20"></string>

</resources>
